# ask-the-code

./: README.md  pyproject.toml  settings.toml
.github/workflows/: pull-request.yml
src/ask_the_code/: __main__.py  args.py  chunkers.py  cli.py  config.py  dependency.py  error.py  llm.py  types.py  utils.py
src/ask_the_code/llm/: __init__.py  ollama.py
src/ask_the_code/store/: __init__.py  chroma.py  marqo.py
tests/ask_the_code/: utils_test.py
tests/ask_the_code/store/: test_chroma.py
