[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-the-code"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Markis Taylor", email = "m@rkis.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Markis Taylor/ask-the-code#readme"
Issues = "https://github.com/Markis Taylor/ask-the-code/issues"
Source = "https://github.com/Markis Taylor/ask-the-code"

[tool.hatch.version]
path = "src/ask_the_code/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ask_the_code tests}"

[tool.coverage.run]
source_pkgs = ["ask_the_code", "tests"]
branch = true
parallel = true
omit = [
  "src/ask_the_code/__about__.py",
]

[tool.coverage.paths]
ask_the_code = ["src/ask_the_code", "*/ask-the-code/src/ask_the_code"]
tests = ["tests", "*/ask-the-code/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
